--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,7 +8,7 @@
   <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
   <title>{% block title %} Base {% endblock %}</title>
 
-  <style>
+  <!-- <style>
     /* Ensure the body takes full height and flexbox is applied */
     html, body {
       height: 100%;
@@ -30,7 +30,7 @@
       padding: 20px 0;
       margin-top: auto; /* Push the footer to the bottom */
     }
-  </style>
+  </style> -->
   
 </head>
 
