--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -5,102 +5,124 @@
 <div class="container mt-4">
     <h1 class="text-center mb-4" style="color: var(--bs-primary);">Create Your Workout Routine</h1>
 
-    <form method="POST">
-        <!-- DAYS AVAILABLE CARD -->
-        <div class="card mb-4 shadow-sm">
-            <div class="card-body">
-                <!-- Header of the Card -->
-                <h5 class="card-title">How many days per week?</h5>
-                
-                <!-- Subtitle with more information -->
-                <p class="card-text">Select the number of days you can commit to working out each week.</p>
+    <!-- DAYS AVAILABLE CARD -->
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <!-- Header of the Card -->
+            <h5 class="card-title">How many days per week?</h5>
 
-                <label for="days_available" class="form-label">Days per Week</label>
-                <input type="range" id="days_available" name="days_available" min="2" max="6" step="1" value="4"
-                    class="form-range" oninput="updateValue(this.value)">
-                <div class="text-center mt-2">
-                    <span id="rangeValue" class="h5" style="color: var(--bs-primary);">4</span>
-                </div>
+            <!-- Subtitle with more information -->
+            <p class="card-text">Select the number of days you can commit to working out each week.</p>
+
+            <div class="btn-group" role="group" aria-label="Days per Week">
+                <button type="button" class="btn btn-outline-primary" data-value="1">1</button>
+                <button type="button" class="btn btn-outline-primary" data-value="2">2</button>
+                <button type="button" class="btn btn-outline-primary" data-value="3">3</button>
+                <button type="button" class="btn btn-outline-primary active btn-primary" data-value="4">4</button> <!-- Default selected -->                <button type="button" class="btn btn-outline-primary" data-value="5">5</button>
+                <button type="button" class="btn btn-outline-primary" data-value="6">6</button>
             </div>
         </div>
+    </div>
 
-        <!-- APPROACH CARD -->
-        <div class="card mb-4 shadow-sm">
-            <div class="card-body">
-                <!-- Header of the Card -->
-                <h5 class="card-title">What best describes your desired approach?</h5>
+    <!-- APPROACH CARD -->
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <!-- Header of the Card -->
+            <h5 class="card-title">What best describes your desired approach?</h5>
 
-                <!-- Subtitle with more information -->
-                <p class="card-text">Choose how you prefer to train: heavy, moderate, or lighter weights with different volumes.</p>
+            <!-- Subtitle with more information -->
+            <p class="card-text">Choose how you prefer to train: heavy, moderate, or lighter weights with different
+                volumes.</p>
 
-                <label for="approach" class="form-label">Approach</label>
-                <select name="approach" id="approach" class="form-select form-select-lg">
-                    <option value="low_volume">Heavy weight, low volume, training very close to or past failure</option>
-                    <option value="moderate_volume" selected>Moderate weight, moderate volume, training close to failure</option>
-                    <option value="high_volume">Lighter weight, higher volume, training somewhat close to failure</option>
-                </select>
-            </div>
+            <label for="approach" class="form-label">Approach</label>
+            <select name="approach" id="approach" class="form-select form-select-lg">
+                <option value="low_volume">Heavy weight, low volume, training very close to or past failure</option>
+                <option value="moderate_volume" selected>Moderate weight, moderate volume, training close to failure
+                </option>
+                <option value="high_volume">Lighter weight, higher volume, training somewhat close to failure</option>
+            </select>
         </div>
+    </div>
 
-        <!-- EQUIPMENT AVAILABLE -->
-        <div class="card mb-4 shadow-sm">
-            <div class="card-body">
-                <!-- Header of the Card -->
-                <h5 class="card-title">Equipment Available?</h5>
+    <!-- EQUIPMENT AVAILABLE -->
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <!-- Header of the Card -->
+            <h5 class="card-title">Equipment Available?</h5>
 
-                <!-- Subtitle with more information -->
-                <p class="card-text">Select the equipment you have access to. This helps us create a more tailored workout plan.</p>
+            <!-- Subtitle with more information -->
+            <p class="card-text">Select the equipment you have access to. This helps us create a more tailored workout
+                plan.</p>
 
-                <div class="accordion" id="accordionExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Equipment
-                            </button>
-                        </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
-                                {% for label, value in [('Barbell', 'Barbell'), ('Dumbbell', 'Dumbbell'), ('Cable', 'Cable'), ('Machine', 'Machine'), ('Bodyweight', 'Bodyweight')] %}
-                                <div class="form-check">
-                                    <input type="checkbox" id="{{ value }}" name="equipment" value="{{ label }}" checked class="form-check-input">
-                                    <label for="{{ value }}" class="form-check-label">{{ label }}</label>
-                                </div>
-                                {% endfor %}
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Equipment
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            {% for label, value in [('Barbell', 'Barbell'), ('Dumbbell', 'Dumbbell'), ('Cable',
+                            'Cable'), ('Machine', 'Machine'), ('Bodyweight', 'Bodyweight')] %}
+                            <div class="form-check">
+                                <input type="checkbox" id="{{ value }}" name="equipment" value="{{ label }}" checked
+                                    class="form-check-input">
+                                <label for="{{ value }}" class="form-check-label">{{ label }}</label>
                             </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- SEE PLANS CARD -->
-        <div class="card mb-4 shadow-sm">
-            <div class="card-body">
-                <!-- Header of the Card -->
-                <h5 class="card-title">Display Plans</h5>
+    <!-- SEE PLANS CARD -->
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <!-- Header of the Card -->
+            <h5 class="card-title">Display Plans</h5>
 
-                <!-- Subtitle with more information -->
-                <p class="card-text">If multiple workout plans are generated, would you like to see all of them?</p>
+            <!-- Subtitle with more information -->
+            <p class="card-text">If multiple workout plans are generated, would you like to see all of them?</p>
 
-                <div>
-                    <input type="radio" id="No" name="see_plans" value="No" required checked>
-                    <label for="No">Choose the best workout for me</label>
-                    <input type="radio" id="Yes" name="see_plans" value="Yes">
-                    <label for="Yes">Show all possible options</label>
-                </div>
+            <div>
+                <input type="radio" id="No" name="see_plans" value="No" required checked>
+                <label for="No">Choose the best workout for me</label>
+                <input type="radio" id="Yes" name="see_plans" value="Yes">
+                <label for="Yes">Show all possible options</label>
             </div>
         </div>
+    </div>
 
-        <!-- BUTTON -->
-        <div class="text-center">
-            <button type="submit" class="btn btn-lg btn-primary">Generate Plan</button>
-        </div>
+    <!-- BUTTON -->
+    <div class="text-center">
+        <button type="submit" class="btn btn-lg btn-primary">Generate Plan</button>
+    </div>
     </form>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+
 <script>
-    function updateValue(val) {
-        document.getElementById("rangeValue").textContent = val;
-    }
+    // Get all buttons in the group
+    const buttons = document.querySelectorAll('.btn-group .btn');
+
+    // Add event listeners to all buttons
+    buttons.forEach(button => {
+        button.addEventListener('click', function () {
+            // Remove active class from all buttons
+            buttons.forEach(btn => btn.classList.remove('active', 'btn-primary'));
+
+            // Add active class to clicked button
+            this.classList.add('active', 'btn-primary');
+        });
+    });
 </script>
 {% endblock %}
+
